# overslash

./: .actrc  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DECISIONS.md  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  SCHEMA.sql  SKILL.md  SPEC.md  STATUS.md  TECH_DEBT.md  TODO.md  UI_SPEC.md  clippy.toml  codecov.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  rust-toolchain.toml
crates/oversla-sh/: Cargo.toml  Dockerfile
crates/oversla-sh/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  slug.rs  storage.rs
crates/oversla-sh/tests/: integration.rs
crates/overslash-api/: Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.sh
crates/overslash-api/src/: acl.rs  config.rs  error.rs  extractors.rs  lib.rs  main.rs  ownership.rs
crates/overslash-api/tests/: acl.rs  actions_reauth.rs  actions_validate.rs  approval_disclosure.rs  approvals_cascade.rs  audit.rs  auth_login.rs  auto_call_on_approve.rs  billing.rs  byoc_self_service.rs  connection_webhooks.rs  cross_tenant_isolation.rs  dashboard_only_endpoints.rs  dev_e2e_seed.rs  enrollment.rs  eventbrite.rs  free_unlimited.rs  github.rs  gmail.rs  google_calendar.rs  google_drive.rs  groups.rs  identity_hierarchy.rs  identity_idle_cleanup.rs  identity_repo.rs  impersonation.rs  inherit_permissions.rs  instance_admin.rs  integration.rs  large_file.rs  mcp_elicitation.rs  mcp_execute.rs  mcp_external.rs  mcp_external_e2e.rs  mcp_oauth.rs  mcp_replay.rs  mcp_require_risk.rs  multi_org.rs  multi_org_backfill.rs  myself_groups.rs  (+28 more)
crates/overslash-cli/: Cargo.toml
crates/overslash-cli/src/: common.rs  main.rs  mcp.rs  mcp_login.rs  mcp_runtime_supervisor.rs  serve.rs  services.rs  watch.rs  web.rs
crates/overslash-core/: Cargo.toml
crates/overslash-core/src/: crypto.rs  description.rs  description_grammar.rs  disclosure.rs  identity_path.rs  lib.rs  openapi.rs  param_resolver.rs  permissions.rs  registry.rs  secret_injection.rs
crates/overslash-db/: Cargo.toml
crates/overslash-db/.sqlx/: query-0101f184283f242305632b0737b1f30c007aec05032d5c5bb5d0e9ba4e6a5be4.json  query-018c2d4c15eb58142129759fa41cfb745c9bc9f8cda2e8b321e13e5d86734d36.json  query-0a78fda6e5113944e0fb41724c4f520f49e87bbc93aa8e6568727af36b671440.json  query-0b0f598db5bc85ab2aeb06f28f22b4b8d1beea8ef8aa4380679a6979a3041e72.json  query-0c48145a9b98792521e8ac8f8931cf454968fb68957b669fe0f7936f5e1b9fd1.json  query-1166c27133761645ee7c11667e2c34387b5af30f0a4bb414b00c2b09da66e019.json  query-12b50afd288bcb5982391b847830c3e31af5d251d006ab44b9382ad526ab4715.json  query-135cfa77fb4ba0ba8d001376fabdcc4102fdbae5feaa52743f8830287506d657.json  query-15c7fdbd0dff2cdc965e30ab27d526244adf6b01412ff4caaab3f78979824c95.json  query-1752e3fb23c68b3fbd6c9cf939e709388694cf6619cb95c3b5c998aba1c9597b.json  query-1806fc254add2bd07767ef389204ff4d514cf59bc364b188eda6d358f12b826c.json  query-20948b3859a26c26166e079e778492b3937735749f2aa863c5de8e8f6205281b.json  query-23f86f63c8c30ae26252db37a9cc53018602e58e153d63eada6bef6bbd7a1b56.json  query-2560c5f8553c759195a7e2c8309d3035938e6ebf5c0d2529f5e079c7f34aa392.json  query-275907d710c602ea61a01da88b38ef3c3234b78415c1aee535b8da07ece36d98.json  query-286d3c0a47ca6d15b62e5fa6ade5fa2938c5f26b88712547f8016eb7925004c0.json  query-2a3cfe764020a66a1fbe8669462b3006927438f0edeaba11d87ab3c2c600a2ab.json  query-2acbe8429067c97ae79ede0b5f8d905829d3d67ee4be4e8dadf2cda5947919f9.json  query-2d5ec11ba9132848032557f1482ee0966a8affb6d6e8b5b54ae1373c9b90f5ac.json  query-2f3b3db45ea2632aac0d3146f74498d994fbe3c629bfeed0b7a2ef422611398d.json  query-30da70462d579b5767207a102846a0797214f99a127f4ca7c5da5d5222c8d98d.json  query-325ed61a9febf36d7a75c7309ecfd91dab3bbb7443fca6fc50e10c48b62b5110.json  query-33c1356a3eddec64db4ed10d1131981895ec5b263cdfa49a57f45b1526a2deff.json  query-3b951395ebb57f9c8b9d6dd8a40bbda90d04d0a637a2b3bb58e69f50a6a5ac74.json  query-3bcd9c8f577604e6eff768774e53d245d273fc861f34aac1ba338ec1607aada0.json  query-3e2dda753f4f89a98293347ef6684f4e52820f523ad9c11f0e7c436007da10e2.json  query-40971829521d4566eadffbc4c341caf79d37cd71c44e9cee21985874a12e5243.json  query-42f6c8960540d593ce7c8e77e2df9b7d2b1e04442327377a15ca7db7a10a658e.json  query-4330ea6aa431285db65202825fe6f357f18f82f0b11800a9ca97d3a9efb9eee9.json  query-481230858d1562f042f889de6866f5d46cf1451ed4a4ec97bc39540ee121f3c9.json  query-4e7c8c4ab9431617a462287558825706e3a0cc92793f10d267e8a00f9b90162f.json  query-4e7d05754a652823d50d0ebfda5dd6515134c7fad16f798fc264fd4466e54dc1.json  query-520cc7565356f07432ee37f6a8133c0006db2d021d7ef5b26fb01896aa6307c2.json  query-525776b8be98102dbc87adf74fedc5b73ceff92207348e10436ee20aa02828ca.json  query-538796995a238fe5cd85e5c8cafa0b512d956f132d1ec3da4cc3d4241bcb474d.json  query-54f965248bc75e9bd986ff9ca32ca72761fde717df9217b14f0fceb722c3d991.json  query-5569851c1eb9c059c88aff7ae5aa8c2f1d80738fe34251e06e7a624d33a03c3e.json  query-568667cb8d94dd0a00ef6a9bfe1741f0588a94c82bc4cc7b32efc0f0d4c19dd1.json  query-58e581141e47858b7168b43210bf8b4cc85e2687aed12d490c4d170e89e672b2.json  query-60c98e12c0c8bab3142f80b33485da98f5c719602223ebbd08e6c7b3be123888.json  (+47 more)
crates/overslash-db/migrations/: 001_create_orgs.up.sql  002_create_identities.up.sql  003_create_api_keys.up.sql  004_create_secrets.down.sql  004_create_secrets.up.sql  005_create_permission_rules.down.sql  005_create_permission_rules.up.sql  006_create_approvals.up.sql  007_create_audit_log.up.sql  008_create_webhooks.down.sql  008_create_webhooks.up.sql  009_create_oauth.down.sql  009_create_oauth.up.sql  010_byoc_null_unique.down.sql  010_byoc_null_unique.up.sql  011_add_x_oauth_provider.down.sql  011_add_x_oauth_provider.up.sql  012_add_token_auth_method.down.sql  (+114 more)
crates/overslash-fakes/: Cargo.toml
crates/overslash-mcp/: Cargo.toml
crates/overslash-mcp-puppet/: Cargo.toml
crates/overslash-metrics/: Cargo.toml
crates/overslash-metrics-exporter/: Cargo.toml  Dockerfile
test-mcp-elicitation/: .gitignore  .mcp.json  README.md  handshake_test.py  pyproject.toml  server.py
tests/mock-target/: Cargo.toml
(+1166 files in other folders)
