[workspace]
resolver = "2"
members = ["crates/overslash-core", "crates/overslash-db", "crates/overslash-api", "tests/mock-target"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "json", "migrate"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
dotenvy = "0.15"
rand = "0.9"
jsonwebtoken = "9"

# Fast dev builds: minimal debug info
[profile.dev]
debug = "line-tables-only"

[profile.dev.package.sqlx-macros]
opt-level = 1
