[workspace]
resolver = "2"
members = ["crates/overslash-core", "crates/overslash-db", "crates/overslash-api", "crates/overslash-mcp", "crates/overslash-cli", "crates/oversla-sh", "crates/overslash-metrics", "crates/overslash-metrics-exporter", "crates/overslash-fakes", "tests/mock-target"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "json", "migrate"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
reqwest = { version = "0.13", features = ["json", "stream", "form"] }
anyhow = "1"
dotenvy = "0.15"
rand = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
dashmap = "6"
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path", "debug-embed"] }
mime_guess = "2"
url = "2"
subtle = "2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Fast dev builds: minimal debug info
[profile.dev]
debug = "line-tables-only"

[profile.dev.package.sqlx-macros]
opt-level = 1
