[package]
name = "overslash-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
overslash-core = { path = "../overslash-core" }
overslash-db = { path = "../overslash-db" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
argon2 = "0.5"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
url = { workspace = true }
urlencoding = "2"
base64 = "0.22"
jsonwebtoken = { workspace = true }
futures-util = "0.3"
redis = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
libc = "0.2"
minijinja = { version = "2", default-features = false, features = ["serde"] }
