[package]
name = "overslash-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "overslash"
path = "src/main.rs"

[features]
default = []
# Embed the SvelteKit dashboard build into the binary so `overslash web`
# can serve it same-origin. Requires `dashboard/build/` to exist (run
# `make dashboard-static` first).
embed-dashboard = ["dep:rust-embed", "dep:mime_guess"]
# Enable MCP-runtime support: adds `--mcp-runtime` flag on `overslash web`,
# embeds `mcp-runtime.mjs` (built by `make build-mcp-runtime`) into the
# binary via rust-embed, and enables the child-process supervisor. Off by
# default so cloud `overslash serve` images stay lean. Requires `node >=
# 22` on PATH when `--mcp-runtime=local` is selected.
mcp = ["dep:rust-embed"]

[dependencies]
overslash-api = { path = "../overslash-api" }
overslash-mcp = { path = "../overslash-mcp" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
base64 = "0.22"
rand = { workspace = true }
webbrowser = "1"
urlencoding = "2"
