[package]
name = "overslash-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["yaml"]
# Enables YAML parsing support in the registry loader and the template
# validator's YAML entry point. Disable for WASM builds that only need to
# validate pre-parsed (JSON / struct) template definitions.
yaml = ["dep:serde_yaml"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
aes-gcm = "0.10"
glob-match = "0.2"
serde_yaml = { version = "0.9", optional = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
