[package]
name = "overslash-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["yaml", "embeddings"]
# Enables YAML parsing support in the registry loader and the template
# validator's YAML entry point. Disable for WASM builds that only need to
# validate pre-parsed (JSON / struct) template definitions.
yaml = ["dep:serde_yaml"]
# Enables the local fastembed backend for semantic search. Off for library
# consumers that only want keyword + fuzzy (or who provide their own
# Embedder impl). The binary targets (overslash-api/-cli) keep this on.
embeddings = ["dep:fastembed"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
aes-gcm = "0.10"
glob-match = "0.2"
serde_yaml = { version = "0.9", optional = true }
tracing = { workspace = true }
strsim = "0.11"
fastembed = { version = "4", optional = true }

[dev-dependencies]
tempfile = "3"
