[package]
name = "overslash-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
overslash-core = { path = "../overslash-core" }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
