[package]
name = "overslash-fakes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "overslash-fakes"
path = "src/bin/overslash_fakes.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
time = { workspace = true }
uuid = { workspace = true }
