[package]
name = "overslash-mcp-puppet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "overslash-mcp-puppet"
path = "src/bin/overslash-mcp-puppet.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
futures-util = "0.3"
tokio = { workspace = true }
uuid = { workspace = true }
