[package]
name = "overslash-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std", "rt", "macros", "sync"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
