[package]
name = "overslash-metrics-exporter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cloud Run Job: queries Postgres and pushes Overslash business metrics to Google Cloud Monitoring"

[[bin]]
name = "overslash-metrics-exporter"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
